--- a/views/component.html
+++ b/views/component.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="docs.css">
 <link rel="stylesheet" type="text/css" href="atom-one-light.css">
-<script src="bundle.js"></script>
+<script src="docs.js"></script>
 </head>
 <body>
 <!--vue-ssr-outlet-->
