:lipstick: 更换 Logo; 暂不生成依赖库的组件; 检查 baseCSSPath 存不存在

--- a/components/common/u-sidebar-item.vue/module.css
+++ b/components/common/u-sidebar-item.vue/module.css
@@ -10,11 +10,13 @@
 }
 
 .root:hover {
+    color: #1ca67d; /* fallback */
     color: $brand-primary;
     /*background-color: $hover-color;*/
 }
 
 .root[selected] {
+    background-color: #1ca67d; /* fallback */
     background-color: $brand-primary;
-    color: #fff;
+    color: white;
 }
