--- a/components/base/base.css
+++ b/components/base/base.css
@@ -58,7 +58,9 @@ header,footer,section,article,aside,nav,hgroup,address,figure,figcaption,menu,de
 */
 
 body {
+    color: #575962;
     font: 14px/1.6 "Helvetica Neue", Helvetica, Tahoma, Arial, "Microsoft YaHei", "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 h6 {
