--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>组件库</title>
+    <title>Vusion 组件库</title>
 </head>
 <body>
     <div id="app">
