--- a/components/common/u-h2-tabs.vue/module.css
+++ b/components/common/u-h2-tabs.vue/module.css
@@ -3,7 +3,7 @@
 .root {}
 
 .head {
-    height: 38px;
+    height: 40px;
     font-size: 16px;
     font-weight: bold;
     margin-top: 50px;
@@ -13,16 +13,16 @@
 }
 
 .item {
-    height: 35px;
-    line-height: 35px;
+    height: 37px;
+    line-height: 37px;
     padding: 0 28px;
     border-radius: 2px 2px 0 0;
-    margin-right: 4px;
+    margin-right: 5px;
     color: #a7afbb;
 }
 
 .item[selected] {
-    color: #6a6f75;
+    color: inherit;
     border-top: 2px solid $brand-primary;
 }
 
