:sparkles: Add dataView & logEvents

--- a/components/common/u-code-example.vue/index.html
+++ b/components/common/u-code-example.vue/index.html
@@ -1,15 +1,32 @@
 <div :class="$style.root">
+    <div :class="$style.demo"><u-code-example-demo><slot></slot></u-code-example-demo></div>
+    <u-collapse-transition>
+        <div :class="$style.body" v-show="currentShowDetail">
+            <div :class="$style.data">
+                <u-data-view readonly :class="$style['logs']" :value="anondemoData"></u-data-view>
+            </div>
+            <div ref="log" :class="$style.log">
+                <u-list-view :class="$style['logs']">
+                    <u-list-view-item :class="$style['logs-item']" v-for="(log, index) in logs" :key="index">
+                        <span :class="$style['logs-event']">@{{ log.eventName }}</span> $emitted by <span>&lt;{{ log.sender }}&gt;</span>
+                    </u-list-view-item>
+                </u-list-view>
+            </div>
+        </div>
+    </u-collapse-transition>
     <div :class="$style.head">
-        <span :class="$style.title">EXAMPLE</span>
+        <!-- <span :class="$style.title">{{ title }}</span> -->
         <div :class="$style.toolbar">
             <div :class="$style['toolbar-item']" name="code" v-tooltip.top="currentShowCode ? '隐藏代码' : '显示代码'"
-                :checked="currentShowCode" @click="toggleShowCode"></div>
+            :checked="currentShowCode" @click="toggleShowCode"></div>
+            <div :class="$style['toolbar-item']" name="copy" v-tooltip.top="'复制代码'"></div>
             <!-- <div :class="$style['toolbar-item']" name="data" v-tooltip.top="showData ? '隐藏数据' : '显示数据'"
                 :checked="showData" @click="showData = !showData"></div> -->
-            <div v-if="!disableDetail" :class="$style['toolbar-item']" name="log" v-tooltip.top="currentShowDetail ? '隐藏实时状态' : '显示实时状态'"
-                :checked="currentShowDetail" @click="toggleShowDetail"></div>
             <div :class="$style['toolbar-divider']"></div>
-            <div :class="$style['toolbar-item']" name="copy" v-tooltip.top="'复制代码'"></div>
+            <div :class="$style['toolbar-item']" name="log" v-tooltip.top="currentShowDetail ? '隐藏实时信息' : '显示实时信息'"
+                :checked="currentShowDetail" @click="toggleShowDetail"></div>
+            <div :class="$style['toolbar-item']" name="clear" v-tooltip.top="'清空日志'" @click="clearLogs"></div>
+            <div :class="$style['toolbar-divider']"></div>
             <a v-if="githubLink" :class="$style['toolbar-item']" name="github" v-tooltip.top="'在 GitHub 中打开'"
                 :href="githubLink" target="_blank"></a>
             <!-- <div :class="$style['toolbar-item']" name="edit"></div>
@@ -18,13 +35,6 @@
             <div :class="$style['toolbar-item']" name="share"></div> -->
         </div>
     </div>
-    <div :class="$style.example"><slot></slot></div>
-    <u-collapse-transition>
-        <div :class="$style.body" v-show="currentShowDetail">
-            <div :class="$style.data"></div>
-            <div :class="$style.log"></div>
-        </div>
-    </u-collapse-transition>
     <u-collapse-transition>
         <div :class="$style.code" v-show="currentShowCode">
             <slot name="code"></slot>
