:bug: Fix examples as first route; Fix events log in <u-code-example>; Update styles of <u-code-example>

--- a/components/common/atom-one-light.css
+++ b/components/common/atom-one-light.css
@@ -1,7 +1,7 @@
 .hljs {
   display: block;
   overflow-x: auto;
-  padding: 0.5em;
+  padding: 5px 10px;
   color: #383a42;
   background: #f7f8fc;
 }
