--- a/components/common/u-code-example.vue/index.html
+++ b/components/common/u-code-example.vue/index.html
@@ -6,9 +6,12 @@
                 <u-data-view readonly :class="$style['logs']" :value="anondemoData"></u-data-view>
             </div>
             <div ref="log" :class="$style.log">
-                <u-list-view :class="$style['logs']">
+                <u-list-view :class="$style['logs']" cancelable>
                     <u-list-view-item :class="$style['logs-item']" v-for="(log, index) in logs" :key="index">
-                        <span :class="$style['logs-event']">@{{ log.eventName }}</span> $emitted by <span>&lt;{{ log.sender }}&gt;</span>
+                        <span :class="$style['logs-event']">@{{ log.eventName }}</span>
+                        <span :class="$style['logs-description']"> $emitted by </span>
+                        <span :class="$style['logs-tag']">&lt;{{ log.sender }}&gt;</span>
+                        <span :class="$style['logs-time']">{{ log.time }}</span>
                     </u-list-view-item>
                 </u-list-view>
             </div>
