--- a/components/common/u-code-example.vue/module.css
+++ b/components/common/u-code-example.vue/module.css
@@ -146,6 +146,11 @@ $transition-duration-base: 0.2s;
     float: right;
 }
 
-.logs-item[class][selected] > * {
+.logs-payload-line {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.logs-item[class][selected] * {
     color: white;
 }
