--- a/components/base/base.css
+++ b/components/base/base.css
@@ -59,12 +59,12 @@ header,footer,section,article,aside,nav,hgroup,address,figure,figcaption,menu,de
 
 body {
     color: $color-base;
-    font: 14px/1.6 "Helvetica Neue", Helvetica, Tahoma, Arial, "Microsoft YaHei", "PingFang SC", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
+    font: 14px/1.6 $font-family-zh-CN;
     -webkit-font-smoothing: antialiased;
 }
 
 h6 {
-    margin: 2em 0;
+    margin: 1em 0;
 }
 
 hr {
@@ -77,4 +77,45 @@ blockquote {
     margin-right: 0;
     padding: 8px 16px;
     border-left: 4px solid $border-color-base;
+}
+
+ul, ol {
+    padding-left: 20px;
+}
+
+dt {
+    font-weight: bold;
+}
+
+dd {
+    margin-left: 0;
+}
+
+pre {
+    tab-size: 4;
+    /* Contain overflow in all browsers. */
+    overflow: auto;
+    background: $background-color-light;
+    border-radius: $border-radius-base;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-family: $font-family-code;
+}
+
+code {
+    padding: 0 3px;
+    font-size: 12px;
+    font-family: $font-family-code;
+    background: $background-color-light;
+    color: #e0276e;
+}
+
+pre code {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font-size: inherit;
+    color: inherit;
+    /* white-space: pre-wrap; */
 }
