--- a/views/theme.html
+++ b/views/theme.html
@@ -8,7 +8,10 @@
     <div id="app"><router-view></router-view></div>
     <script>
     // @TODO: different library collision
-    var theme = window.theme = localStorage.getItem('theme');
+    var theme = window.theme = '';
+    try {
+        theme = window.theme = localStorage.getItem('theme');
+    } catch (e) {}
 
     window.getThemeCSS = (theme) => !theme || theme === 'default' ? 'docs.css' : 'theme-' + theme + '.css';
 
