:hammer: Refactor css variables

--- a/components/common/u-h2-tabs.vue/module.css
+++ b/components/common/u-h2-tabs.vue/module.css
@@ -23,7 +23,7 @@
 
 .item[selected] {
     color: inherit;
-    border-top: 2px solid $brand-primary;
+    border-top: 2px solid var(--brand-primary);
 }
 
 .body {
