--- a/components/common/u-code-example.vue/module.css
+++ b/components/common/u-code-example.vue/module.css
@@ -1,10 +1,8 @@
-$transition-duration-base: 0.2s;
-
 .root {
     margin: 10px 0;
-    border: 1px solid $border-color-base;
-    border-radius: $border-radius-base;
-    transition: box-shadow $transition-duration-base;
+    border: 1px solid var(--border-color-base);
+    border-radius: var(--border-radius-base);
+    transition: box-shadow var(--transition-duration-base);
 }
 
 .root:hover {
@@ -14,7 +12,7 @@ $transition-duration-base: 0.2s;
 .head {
     position: relative;
     height: 29px;
-    border-top: 1px solid $border-color-base;
+    border-top: 1px solid var(--border-color-base);
 }
 
 .title {
@@ -38,21 +36,21 @@ $transition-duration-base: 0.2s;
     text-align: center;
     color: #a7afbb;
     line-height: 28px;
-    transition: color $transition-duration-base;
-    cursor: $cursor-pointer;
+    transition: color var(--transition-duration-base);
+    cursor: var(--cursor-pointer);
 }
 
 .toolbar-item:hover {
-    color: $color-base;
+    color: var(--color-base);
 }
 
 .toolbar-item[checked] {
-    color: $brand-primary;
+    color: var(--brand-primary);
 }
 
 .toolbar-item[disabled] {
-    color: $brand-disabled;
-    cursor: $cursor-not-allowed;
+    color: var(--brand-disabled);
+    cursor: var(--cursor-not-allowed);
 }
 
 .toolbar-item[name="code"]::before { icon-font: url('./assets/code.svg'); }
@@ -69,7 +67,7 @@ $transition-duration-base: 0.2s;
 .toolbar-divider {
     display: inline-block;
     width: 1px;
-    background: $border-color-base;
+    background: var(--border-color-base);
     height: 18px;
     margin: 5px 8px;
     vertical-align: top;
@@ -80,8 +78,8 @@ $transition-duration-base: 0.2s;
 }
 
 .body {
-    border-top: 1px solid $border-color-base;
-    transition: $transition-duration-base height ease-in-out, $transition-duration-base padding-top ease-in-out, $transition-duration-base padding-bottom ease-in-out;
+    border-top: 1px solid var(--border-color-base);
+    transition: var(--transition-duration-base) height ease-in-out, var(--transition-duration-base) padding-top ease-in-out, var(--transition-duration-base) padding-bottom ease-in-out;
 }
 
 .data {
@@ -98,13 +96,13 @@ $transition-duration-base: 0.2s;
     width: 50%;
     height: 100px;
     overflow: auto;
-    border-left: 1px solid $border-color-base;
+    border-left: 1px solid var(--border-color-base);
 }
 
 .code {
-    border-top: 1px solid $border-color-base;
+    border-top: 1px solid var(--border-color-base);
     background: #f8f9fb;
-    transition: $transition-duration-base height ease-in-out, $transition-duration-base padding-top ease-in-out, $transition-duration-base padding-bottom ease-in-out;
+    transition: var(--transition-duration-base) height ease-in-out, var(--transition-duration-base) padding-top ease-in-out, var(--transition-duration-base) padding-bottom ease-in-out;
 }
 
 .code pre {
@@ -118,7 +116,7 @@ $transition-duration-base: 0.2s;
 .logs[class] {
     border: none;
     font-size: 12px;
-    font-family: $font-family-code;
+    font-family: var(--font-family-code);
     line-height: 20px;
     /* height: 100%;
     overflow: auto; */
