--- a/components/common/u-code-example.vue/module.css
+++ b/components/common/u-code-example.vue/module.css
@@ -113,7 +113,7 @@
     display: none;
 }
 
-.logs[class] {
+.logs {
     border: none;
     font-size: 12px;
     font-family: var(--font-family-code);
@@ -122,7 +122,7 @@
     overflow: auto; */
 }
 
-.logs-item[class] {
+.logs-item {
     padding: 0 4px;
     cursor: default;
 }
@@ -149,6 +149,6 @@
     text-overflow: ellipsis;
 }
 
-.logs-item[class][selected] * {
+.logs-item[selected] * {
     color: white;
 }
