--- a/components/common/u-h2-tabs.vue/module.css
+++ b/components/common/u-h2-tabs.vue/module.css
@@ -1,4 +1,4 @@
-@extend 'proto-ui.vusion/src/components/u-tabs.vue/module.css';
+@extend 'cloud-ui.vusion/src/components/u-tabs.vue/module.css';
 
 .root {}
 
