--- a/components/common/u-h2-tabs.vue/module.css
+++ b/components/common/u-h2-tabs.vue/module.css
@@ -3,27 +3,61 @@
 .root {}
 
 .head {
-    height: 42px;
-    font-size: 17px;
+    height: auto;
+    font-size: 19px;
     font-weight: bold;
     margin-top: 50px;
-    margin-right: -20px;
-    margin-left: -20px;
-    padding: 0 20px;
+    margin-right: -25px;
+    margin-left: -25px;
+    padding: 0 25px;
+}
+
+.nav {
+    height: 47px;
+    margin-left: -25px;
 }
 
 .item {
-    height: 39px;
-    line-height: 39px;
-    padding: 0 28px;
+    position: relative;
+    height: 46px;
+    line-height: 46px;
+    padding: 0 25px;
+    padding-bottom: 1px;
+    /* min-width: 72px; */
+    /* text-align: center; */
     border-radius: 2px 2px 0 0;
-    margin-right: 5px;
+    margin-right: 15px;
     color: #a7afbb;
+    border: none;
+    transition: color var(--transition-duration-base);
+}
+
+.item::after {
+    display: block;
+    content: '';
+    position: absolute;
+    height: 2px;
+    bottom: 0;
+    background: var(--brand-primary);
+    width: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: width var(--transition-duration-base);
+}
+
+.item:hover {
+    background: none;
+    color: var(--color-base);
 }
 
 .item[selected] {
-    color: inherit;
-    border-top: 2px solid var(--brand-primary);
+    color: var(--brand-primary);
+    border: none;
+    background: none;
+}
+
+.item[selected]::after {
+    width: 100%;
 }
 
 .body {
