:fire: Remove proto-ui

--- a/views/demo.html
+++ b/views/demo.html
@@ -10,7 +10,7 @@
         <u-button @click="show">Click me!</u-button>
     </div>
     <script>
-        Vue.use(ProtoUI);
+        Vue.use(CloudUI);
         new Vue({
             el: '#app',
             methods: {
